--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_message_files(
 add_action_files(
   FILES
   pollySpeech.action
+  HeadCmd.action
 )
 
 ## Generate added messages and services with any dependencies listed here
